@@ -26,6 +26,7 @@
 #define IDS_VDF_DXVA_ENABLE				33188
 #define IDS_VDF_DXVA_MODE				33189
 #define IDS_VDF_FFMPEG_ENABLE			33192
+#define IDS_VDF_VIDEOCARD				33194
 
 
 // Next default values for new objects
